objects/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
   name: namespace-a
   labels:
     myspace: namespacea
