objects/Labels_pod.yaml
kind: Pod
apiVersion: v1
metadata:
  name: marvelpod
  labels:                                                   
    env: development
    class: pods
spec:
    containers:
       - name: c00
         image: ubuntu
         command: ["/bin/bash", "-c", "while true; do echo Hello-Satish; sleep 5 ; done"]
