objects/Port_Pod_Networking.yaml
kind: Pod
apiVersion: v1
metadata:
  name: thorpod
spec:
  containers:
    - name: c00
      image: ubuntu
      command: ["/bin/bash", "-c", "while true; do echo Hello-Satish; sleep 5 ; done"]
    - name: c01
      image: httpd
      ports:
       - containerPort: 80
