objects/multiple_pod_creation.yaml
kind: Pod
apiVersion: v1
metadata:
  name: testpod3
  annotations:
     description: "this is yaml file creating more than one pod for ubuntu image."
spec:
  containers:
    - name: c00
      image: ubuntu
      command: ["/bin/bash", "-c", "while true; do echo welcome; sleep 5 ; done"]
    - name: c01
      image: ubuntu
      command: ["/bin/bash", "-c", "while true; do echo satish gupta; sleep 5 ; done"]
