objects/ingress1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-myapp
spec:
  rules:
  - host: myapp.com
    http:
        paths:
        - backend:
             serviceName: demoservice1
             servicePort: 80
